# rusty-gst-qt

./: Cargo.toml  FileChooser.qml  README.md  launcher.qml
src/: main.rs
